Added disabled prop for button

--- a/src/common/components/button/button.styles.scss
+++ b/src/common/components/button/button.styles.scss
@@ -13,6 +13,10 @@
         color: black;
         opacity: 1;
     }
+
+    &:disabled {
+        cursor: not-allowed;
+    }
 }
 
 .google-sign-in {
