--- a/src/common/components/spinner/dark/dark-spinner.styles.scss
+++ b/src/common/components/spinner/dark/dark-spinner.styles.scss
@@ -10,9 +10,12 @@
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  position: absolute;
   top: 50%;
   left: 50%;
+}
+
+.absolute {
+  position: absolute;
 }
 
 .xs {
