--- a/src/common/components/navigation-bar/navigation.styles.scss
+++ b/src/common/components/navigation-bar/navigation.styles.scss
@@ -1,10 +1,12 @@
 .navigation {
     display: flex;
     flex-direction: row;
+    border: 1px solid gray;
     justify-content: space-between;
-    margin-top: 1rem;
-    position: relative;
-    height: 3rem;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    width: calc(100% - 80px); // 40px is the extra padding we have specified in index.scss for all elements, hence reducing its width by 40px * 2 as it is a fixed positioned element
 
     & .nav-links-container {
         display: flex;
