--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -3,6 +3,6 @@
     width: 70%;
     justify-content: space-between;
     margin: 2rem auto;
-    border: 1px solid gray;
+    height: 200vh;
   }
   
