--- a/src/features/cart/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/features/cart/cart-dropdown/cart-dropdown.styles.scss
@@ -5,11 +5,13 @@
     border: 1px solid black;
     width: 17%;
     top: 4rem;
-    left: 83%;
-    z-index: 1000;
+    left: calc(100% - 17%);
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem;
+    max-height: 85vh;
+    overflow: scroll;
 }
