--- a/src/common/components/alert/alert.styles.scss
+++ b/src/common/components/alert/alert.styles.scss
@@ -1,7 +1,7 @@
 $error-color: #dc3545;
 $success-color: #28a745;
 $primary-color: black;
-$warning-color: yellow;
+$warning-color: rgb(209, 209, 78);
 
 .alert-container {
     display: flex;
