--- a/src/common/components/card/card.styles.scss
+++ b/src/common/components/card/card.styles.scss
@@ -4,12 +4,31 @@
     position: relative;
     flex: 1 1 auto;
     cursor: pointer;
-    margin: 0.5rem;
+    border: 1px solid red;
+    overflow: scroll;
+
+    @media screen and (max-width: 800px) {
+        height: 220px;
+        min-width: 40%;
+
+        // there is no hover on mobile devices, so unsetting these values
+        &:hover {
+            .background-image {
+                transform: unset;
+                overflow: unset;
+            }
+    
+            .card-body-container-without-overlay {
+                visibility: unset;
+            }
+        }
+    }
 
     & .image-wrapper {
         height: 100%;
         width: 100%;
         overflow: hidden;
+        border: 1px solid green;
 
         & .background-image {
             height: 100%;
@@ -48,6 +67,15 @@
         &:hover {
             opacity: 1;
         }
+
+        @media screen and (max-width: 800px) {
+            opacity: 0.7;
+            font-size: 0.7rem;
+
+            h2 {
+                font-size: 1rem;
+            }
+        }
     }
 
     & .card-body-container-without-overlay {
@@ -63,6 +91,11 @@
         text-align: center;
         visibility: hidden;
 
+        @media screen and (max-width: 800px) {
+            padding: 0 1rem;
+            visibility: visible;
+        }
+
         &:hover {
             background-color: black;
             color: white;
@@ -73,11 +106,11 @@
         }
     }
 
-    & .bottom {
+    & .overlay-position-bottom {
         top: 75%;
     }
 
-    & .small {
+    & .overlay-header-small {
         h2 {
             font-size: 1rem;
         }
