--- a/src/common/components/card/card.styles.scss
+++ b/src/common/components/card/card.styles.scss
@@ -70,7 +70,9 @@
 
         @media screen and (max-width: 800px) {
             opacity: 0.7;
-            font-size: 0.7rem;
+            font-size: 0.8rem;
+            padding: 0 1rem;
+            top: 75%;
 
             h2 {
                 font-size: 1rem;
