--- a/src/features/cart/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/features/cart/cart-dropdown/cart-dropdown.styles.scss
@@ -3,9 +3,9 @@
     background-color: white;
     min-height: 300px;
     border: 1px solid black;
-    width: 17%;
+    width: 240px;
     top: 4rem;
-    left: calc(100% - 17%);
+    left: calc(100% - 240px);
     z-index: 1;
     display: flex;
     flex-direction: column;
