--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -1,13 +1,28 @@
 .checkout-container-wrapper {
+    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
 
     & .checkout-container {
+        border: 1px solid red;
         width: 55%;
         margin: 1rem 0;
+
+        @media screen and (max-width: 1000px) {
+            width: 70%;
+        }
+
+        @media screen and (max-width: 800px) {
+            width: 80%;
+        }
+
+        @media screen and (max-width: 600px) {
+            width: 90%;
+        }
     
         & .checkout-header {
+            border: 1px solid blue;
             display: flex;
             flex-direction: row;
             justify-content: space-around;
