Sticky header on the checkout screen

--- a/src/routes/checkout/checkout-item.styles.scss
+++ b/src/routes/checkout/checkout-item.styles.scss
@@ -10,6 +10,7 @@
     }
 
     & .image-container {
+        border: 1px solid green;
         width: 20%;
         img {
             height: 100%;
