--- a/src/features/payment/PaymentForm.styles.scss
+++ b/src/features/payment/PaymentForm.styles.scss
@@ -1,12 +1,12 @@
-.payment-container {
+.payment-form-container {
     height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
-.payment-form-container {
-    height: 500px;
+.payment-container {
+    height: 100px;
     width: 500px;
 }
